Fix alignment of page-header information for tablet view
[3.1]

Please cherry-pick to master

--- a/resources/stylesheets/component/tablet/pageheader.page-edit.less
+++ b/resources/stylesheets/component/tablet/pageheader.page-edit.less
@@ -4,12 +4,13 @@
 
 	& > ul {
 		display: flex;
-		flex-wrap: nowrap;
+		flex-wrap: wrap-reverse;
 		justify-content: flex-start;
 
 		& > li {
 			margin: 0;
 			margin-bottom: 0.625rem;
+			min-width: 100%;
 		}
 	}
 
